set Opal v0.10.0  to install from GitHub

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,4 +16,6 @@ django-compressor==1.5
 python-dateutil==2.4.2
 django-celery==3.1.17
 celery==3.1.19
-opal==0.10.0
+
+# Open Health Care repositories on GitHub
+-e git+https://github.com/openhealthcare/opal.git@v0.10.0#egg=opal
