first draft of converting FP17 Django Forms into Django Models, with an attempt at redrafting the names of models so that they have semantically appropriate namespacing and theri origin would be clear if they were reused as part of an Opal Models package

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,6 @@ celery==3.1.19
 
 # Open Health Care repositories on GitHub
 -e git+https://github.com/openhealthcare/opal.git@v0.10.0#egg=opal
+
+# Odonto repositories on GitHub
+-e git+https://github.com/odonto/opal-odontotheme.git@master#egg=odontotheme
