--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,5 @@ install:
 script:
   - PYTHONPATH=. pytest -vv -r sxX -l
   - PYTHONPATH=. supplier_testing/generate --site-number=01009 --contract-number=2371750001 --performer-number=237175 --location-id=008023 --pin=179056 --serial-number=160900 --start-claim-number=69800 --surname-prefix="OHA" > supplier_testing_$(date +%s).xml
+notifications:
+  slack: ohcuk:6spaME3CB7f2PGrMAcklYWqp
