--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install sphinx
+  - pip install coveralls pytest-cov
 script:
-  - PYTHONPATH=. pytest -vv -r sxX -l
+  - PYTHONPATH=. pytest -vv -r sxX -l --cov=fp17
   - PYTHONPATH=. supplier_testing/generate --site-number=01009 --contract-number=2371750001 --performer-number=237175 --location-id=008023 --pin=179056 --serial-number=160900 --start-claim-number=69800 --surname-prefix="OHA" > supplier_testing_$(date +%s).xml
   - make -C docs html
 notifications:
