Ensure the documentation at least builds.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,10 @@ python:
   - "3.6"
 install:
   - pip install -r requirements.txt
+  - pip install sphinx
 script:
   - PYTHONPATH=. pytest -vv -r sxX -l
   - PYTHONPATH=. supplier_testing/generate --site-number=01009 --contract-number=2371750001 --performer-number=237175 --location-id=008023 --pin=179056 --serial-number=160900 --start-claim-number=69800 --surname-prefix="OHA" > supplier_testing_$(date +%s).xml
+  - make -C docs html
 notifications:
   slack: ohcuk:6spaME3CB7f2PGrMAcklYWqp
