--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # cryptography is required for heroku deployment
-cryptography==1.3.2
+# cryptography==1.3.2
 Django==1.10.8
 coverage==3.6
 dj-database-url==0.2.1
