removes celery for the time being

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,8 @@ requests==2.18.4
 djangorestframework==3.4.7
 django-compressor==1.5
 python-dateutil==2.4.2
-django-celery==3.1.17
-celery==3.1.19
+# django-celery==3.1.17
+# celery==3.1.19
 
 # Open Health Care repositories on GitHub
 -e git+https://github.com/openhealthcare/opal.git@v0.10.0#egg=opal
