--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
 # cryptography is required for heroku deployment
 # cryptography==1.3.2
-Django==1.10.8
+django==2.0.9
 coverage==3.6
 dj-database-url==0.2.1
 gunicorn==0.17.4
-psycopg2-binary==2.7.5
+psycopg2==2.7.5
 dj-static==0.0.6
-django-reversion==1.10.2
+django-reversion==3.0.1
 django-axes==1.7.0
 ffs==0.0.8.2
-letter==0.4.1
-requests==2.18.4
-djangorestframework==3.4.7
-django-compressor==1.5
-python-dateutil==2.4.2
+letter==0.5
+requests==2.20.1
+djangorestframework==3.7.4
+django-compressor==2.2
+python-dateutil==2.7.5
 # django-celery==3.1.17
-# celery==3.1.19
+# celery==3.1.25
 
 # Open Health Care repositories on GitHub
-opal==0.11.2
+opal==0.13.0
