--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,10 @@ requests==2.20.1
 djangorestframework==3.7.4
 django-compressor==2.2
 python-dateutil==2.7.5
+xmlschema==0.9.20
+lxml==4.1.1
+cerberus==1.1
+click==6.7
 # django-celery==3.1.17
 # celery==3.1.25
 
