--- a/requirements.txt
+++ b/requirements.txt
@@ -22,4 +22,4 @@ click==6.7
 # celery==3.1.25
 
 # Open Health Care repositories on GitHub
--e git+https://github.com/openhealthcare/opal.git@v0.14.0#egg=opal
+-e git+https://github.com/openhealthcare/opal.git@docs-change#egg=opal
