--- a/requirements.txt
+++ b/requirements.txt
@@ -21,5 +21,5 @@ click==6.7
 # django-celery==3.1.17
 # celery==3.1.25
 
-# Open Health Care repositories on GitHub
--e git+https://github.com/openhealthcare/opal.git@v0.14.0#egg=opal
+# Open Health Care repositories
+opal==0.14.2
