--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,6 @@ click==6.7
 
 # Open Health Care repositories
 opal==0.18.0
+
+
+-e git+https://github.com/openhealthcare/opal-passwordreset.git@master#egg=opal_passwordreset
