--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,16 @@ dist: trusty
 language: python
 python:
   - "3.6"
+env:
+  - NODE_VERSION="15"
+before_install:
+  - nvm install $NODE_VERSION
 install:
   - pip install --upgrade pip
   - pip install -r requirements.txt
   - pip install coveralls
   - gem install coveralls-lcov
   - npm install npm install karma karma-coverage jasmine-core karma-jasmine karma-firefox-launcher karma-coveralls
-
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
