Remove coverralls and see if this fixes travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,12 +16,6 @@ before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
 script:
-  - opal test --coverage
-after_success:
-  - find coverage
-  - coveralls-lcov -v -n coverage/Firefox\ 56.0.0\ \(Linux\ 0.0.0\)/lcov.info > coverage/coverage.json
-  - cat coverage/coverage.json
-  - coveralls debug --merge=coverage/coverage.json
-  - coveralls --merge=coverage/coverage.json
+  - opal test
 notifications:
   slack: ohcuk:6spaME3CB7f2PGrMAcklYWqp
