--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
   - pip install -r requirements.txt
   - pip install coveralls
   - gem install coveralls-lcov
+  - npm install -g npm@latest
   - npm install npm install karma karma-coverage jasmine-core karma-jasmine karma-firefox-launcher karma-coveralls
 before_script:
   - export DISPLAY=:99.0
