--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,9 @@
-on: [push, pull_request]
+on: [pull_request]
+name: CI
 jobs:
   # run python/js tests, coveralls and lint
   test:
-    name: Integration test ${{ matrix.os }} python ${{ matrix.python-version }}
+    name: python ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
     services:
       postgres:
@@ -19,7 +20,7 @@ jobs:
         os:
         - ubuntu-20.04
         python-version:
-        - 3.7
+        - 3.6
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -35,8 +36,6 @@ jobs:
         run: npm install jasmine-core@2.3.4 karma@1.5 karma-coverage@1.1.1 karma-jasmine@0.3.8 karma-firefox-launcher@2.1.0 karma-coveralls@1.1.2
       - name: Install requirements
         run: pip install -r requirements.txt
-      - name: Install opal with workflows
-        run: pip install -e git+https://github.com/openhealthcare/opal@work-flows#egg=opal
       - run: gem install coveralls-lcov
       - name: run tests
         run: opal test --coverage
