--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 # cryptography is required for heroku deployment
 # cryptography==1.3.2
 django==2.2.16
-coverage==4.5.4
+coverage==6.2
+coveralls==3.3.1
 dj-database-url==0.2.1
 gunicorn==0.17.4
 psycopg2==2.8.6
