--- a/requirements.txt
+++ b/requirements.txt
@@ -13,14 +13,17 @@ requests==2.25.0
 djangorestframework==3.12.2
 django-compressor==2.4
 python-dateutil==2.8.1
-xmlschema==0.9.20
+xmlschema==1.1.3
 lxml==4.9.3
-cerberus==1.3
+cerberus==1.3.5
 click==7.0
+pytz==2023.3
+
 # django-celery==3.1.17
 # celery==3.1.25
 
 # Open Health Care repositories
-opal==0.22.2
+#opal==0.22.2
+-e git+https://github.com/openhealthcare/opal-@v0.22.2-odonto#egg=opal
 
 -e git+https://github.com/openhealthcare/opal-passwordreset@v0.1#egg=opal_passwordreset
