Fixup:typo in url

--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,6 @@ pytz==2023.3
 
 # Open Health Care repositories
 #opal==0.22.2
--e git+https://github.com/openhealthcare/opal-@v0.22.2-odonto#egg=opal
+-e git+https://github.com/openhealthcare/opal@v0.22.2-odonto#egg=opal
 
 -e git+https://github.com/openhealthcare/opal-passwordreset@v0.1#egg=opal_passwordreset
