Circus executable isn't in normal place

--- a/deployment/config/circus.service
+++ b/deployment/config/circus.service
@@ -4,8 +4,8 @@ After=syslog.target network.target nss-lookup.target
 
 [Service]
 Type=simple
-ExecReload=/usr/bin/circusctl reload
-ExecStart=/usr/bin/circusd /etc/circus/circus.ini
+ExecReload=/home/ohc/.virtualenvs/odonto/bin/circusctl reload
+ExecStart=/home/ohc/.virtualenvs/odonto/bin/circusd /etc/circus/circus.ini
 Restart=always
 RestartSec=5
 
