set pythonpath for circus, Fixup typo

--- a/deployment/config/circusd.ini
+++ b/deployment/config/circusd.ini
@@ -12,3 +12,6 @@ stderr_stream.filename = /usr/lib/ohc/log/gunicorn.stderr.log
 copy_env = true
 virtualenv = /home/ohc/.virtualenvs/odonto
 virtualenv_py_ver = 3.11
+
+[env:app]
+PYTHONPATH = $PYTHONPATH:.
