Move gunicorn working dir

--- a/deployment/config/circusd.ini
+++ b/deployment/config/circusd.ini
@@ -1,7 +1,7 @@
 [watcher:app]
 cmd = gunicorn
 args = odonto.wsgi -c /usr/lib/ohc/etc/gunicorn_conf.py
-working_dir = /usr/lib/ohc
+working_dir = /usr/lib/ohc/odonto
 uid = ohc
 numprocesses = 1
 autostart = true
